[package]
name = "openarmor"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies]
# Add your dependencies here
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
